Added Microsoft translator, fixed error in parsing of translate.ru answer

--- a/popup.html
+++ b/popup.html
@@ -35,7 +35,8 @@
 				<select id="tr_res" class="form-control">
 					<option value="r">reverso</option>
 					<option value="g">google</option>
-					<option value="t">translate</option>								
+					<option value="t">translate</option>
+					<option value="m">microsoft</option>													
 				</select>
 			</div>
 			<div class="div_rf">
@@ -70,7 +71,10 @@
 		</div>
 		<div id="translate_t">
 			loading ...
-		</div>				
+		</div>	
+		<div id="microsoft">
+			loading ...
+		</div>						
 	</div>
 </body>
 </html>
